# pymanopt

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  MAINTAINERS  MANIFEST.in  README.md  TODO.md  TheanoVShess.ipynb  VERSION  ci-requirements.txt  dev-requirements.txt  example.ipynb  pyproject.toml  quickstart.py  requirements.txt  setup.cfg  setup.py  todo.md  versioneer.py
.github/workflows/: build.yml  build_documentation.yml  build_release_package.yml  codeql.yml  deploy.yml  docs.yml  run_linting.yml  run_tests.yml
docs/: api-reference.rst  autodiff.rst  bibliography.rst  conf.py  index.rst  manifolds.rst  optimizers.rst  problem.rst  quickstart.rst  solvers.rst  tools.rst
docs/_static/css/: style.css
docs/_templates/: versions.html
examples/: MoG.ipynb  MoG_singularity_heuristic.ipynb  __init__.py  _tools.py  backend-everywhere.py  check_gradient.py  closest_unit_norm_column_approximation.py  dominant_eigenvector.py  dominant_eigenvector_gradient.py  dominant_eigenvector_pytorch.py  dominant_invariant_complex_subspace.py  dominant_invariant_subspace.py  linreg.py  linreg_multiple.py  linreg_multiple_autograd.py  linreg_multiple_pytorch.py  linreg_multiple_theano.py  low_rank_matrix_approximation.py  low_rank_psd_matrix_approximation.py  multiple_linear_regression.py  optimal_rotations.py  optlog_example.py  packing_on_the_sphere.py  pca.py  pca_autograd.py  pca_pytorch.py  rank_k_correlation_matrix_approximation.py  regression_offset.py  regression_offset_autograd.py  regression_offset_tensorflow.py  regression_offset_theano.py  rotations_example.py  run_all.sh
examples/advanced/: check_gradient.py  check_hessian.py  check_retraction.py  optlog_example.py
examples/notebooks/: mixture_of_gaussians.ipynb  mixture_of_gaussians.py
pymanopt/: __init__.py  _version.py  function.py
pymanopt/autodiff/: __init__.py
pymanopt/autodiff/backends/: __init__.py  _autograd.py  _backend.py  _callable.py  _jax.py  _numpy.py  _pytorch.py  _tensorflow.py  _theano.py
pymanopt/core/: problem.py
pymanopt/manifolds/: Skew_Symmetric.py  __init__.py  complex_circle.py  complex_euclidean.py  complex_grassmann.py  complexcircle.py  euclidean.py  euclidian.py  fixed_rank.py  grassmann.py  group.py  hpd.py  hyperbolic.py  manifold.py  oblique.py  positive.py  positive_definite.py  product.py  psd.py  rotations.py  special_orthogonal_group.py  sphere.py  stiefel.py  strictly_positive_vectors.py  unitaries.py
pymanopt/optimizers/: __init__.py  conjugate_gradient.py  line_search.py  nelder_mead.py  optimizer.py  particle_swarm.py  steepest_descent.py  trust_regions.py
pymanopt/solvers/: __init__.py  _solver.py  conjugate_gradient.py  conjugate_gradients.py  gradient_descent.py  line_search.py  linesearch.py  nelder_mead.py  particle_swarm.py  solver.py  steepest_descent.py  trust_regions.py
pymanopt/solvers/steepest_descent/: steepest_descent.py
pymanopt/tools/: __init__.py  _functions.py  decorators.py  diagnostics.py  multi.py  printer.py  testing.py  theano_functions.py  utils.py
pymanopt/tools/autodiff/: __init__.py  (+7 more)
requirements/: base.txt  ci.txt  dev.txt  docs.txt
src/pymanopt/: __init__.py  function.py
tests/: __init__.py  _test.py  conftest.py  test_autograd.py  test_examples.py  test_manifold_elliptope.py  test_manifold_euclidian.py  test_manifold_fixed_rank.py  test_manifold_fixedrank.py  test_manifold_fixedrank_complex.py  test_manifold_grassmann.py  test_manifold_oblique.py  test_manifold_positive_definite.py  test_manifold_product.py  test_manifold_psd_fixedrank.py  test_manifold_psd_fixedrank_complex.py  test_manifold_rotations.py  test_manifold_special_orthogonal_group.py  test_manifold_sphere.py  test_manifold_stiefel.py  test_manifold_symmetric.py  test_multi.py  test_multi_tools.py  test_problem.py  test_problem_backend_interface.py  test_pytorch.py  test_sphere_manifold.py  test_tensorflow.py  test_theano.py
tests/backends/: _backend_tests.py  test_autograd.py  test_backend_tools.py  test_jax.py  test_numpy.py  test_pytorch.py  test_tensorflow.py
tests/manifolds/: _manifold_tests.py  test_complex_circle.py  test_complex_euclidean.py  test_complex_grassmann.py  test_elliptope.py  test_euclidean.py  test_fixed_rank.py  test_generalized_stiefel.py  test_grassmann.py  test_group.py  test_hpd.py  test_hyperbolic.py  test_manifold.py  test_oblique.py  test_positive_definite.py  test_positive_matrices.py  test_product.py  test_psd_fixedrank.py  test_psd_fixedrank_complex.py  test_special_orthogonal_group.py  test_sphere.py  test_stiefel.py  test_strictly_positive_vectors.py  test_symmetric.py  test_symmetric_positive_definite.py
tests/numerics/: __init__.py  test_core.py  test_linalg.py  test_numerics.py  test_random.py  test_special.py  test_testing_utilities.py
tests/optimizers/: test_conjugate_gradient.py  test_frank_wolfe.py  test_optimizers.py  test_optimzers.py
tests/solvers/: test_conjugate_gradient.py
tests/test_backends/: _backend_tests.py  test_autograd.py  test_backend_tools.py  test_callable.py  test_jax.py  test_numpy.py  test_pytorch.py  test_tensorflow.py  test_theano.py
tests/test_manifolds/: test_complex_circle.py  test_complex_euclidean.py  test_complex_grassmann.py  test_elliptope.py  test_euclidean.py  test_fixed_rank.py  test_grassmann.py  test_hpd.py  test_hyperbolic.py  test_manifold_complex_circle.py  test_manifold_fixed_rank.py  test_manifold_grassmann.py  test_manifold_product.py  test_manifold_psd_fixedrank.py  test_manifold_psd_fixedrank_complex.py  test_manifold_sphere.py  test_manifold_stiefel.py  test_manifold_symmetric.py  test_manifold_symmetric_positive_definite.py  test_oblique.py  test_product.py  test_psd_fixedrank.py  test_psd_fixedrank_complex.py  test_special_orthogonal_group.py  test_sphere.py  test_stiefel.py  test_strictly_positive_vectors.py  test_symmetric.py  test_symmetric_positive_definite.py
tools/: bootstrap-pyenv-virtualenv.sh
website/: CNAME  MoG.html  README.md  index.html
website/css/: layout.css
(+69 files in other folders)
