[build-system]
requires = ["pip==21.3.1", "setuptools==59.6.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pymanopt/_version.py"

[tool.black]
include = '\.py$'
line-length = 79

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "pycharm"
use_parentheses = true

[tool.flake8]
application_import_names = "pymanopt"
docstring-convention = "google"
exclude = [
  "examples/notebooks/*.py",
  "build"
]
ignore = ["B024", "B027", "D1", "E203", "E501", "W503"]
import_order_style = "pycharm"
max-line-length = 79
select = ["B", "B950", "C", "D", "E", "F", "W"]
