[build-system]
requires = ["pip==22.3.1", "setuptools>=66.1.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pymanopt"
dynamic = ["version"]
description = """\
  Toolbox for optimization on Riemannian manifolds with support for automatic \
  differentiation\
"""
authors = [
  {name = "Jamie Townsend"},
  {name = "Niklas Koep"},
  {name = "Sebastian Weichwald"},
]
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.8"
keywords = [
  "manifolds",
  "optimization",
  "automatic differentiation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "numpy>=1.16.0",
  "scipy>=1.0,!=1.10.*,!=1.11.*,!=1.12.*",
]
[project.urls]
homepage = "https://pymanopt.org"

[project.optional-dependencies]
autograd = [
  "autograd>=1.2",
]
jax = [
  "jax>=0.2.0",
  "jaxlib",
]
tensorflow = [
  "tensorflow>=2.0.0",
]
torch = [
  "torch>=1.0.0",
]
backends = [
  "pymanopt[autograd,jax,tensorflow,torch]",
]
dev = [
  "black[jupyter]==22.3.0",
  "flake8==5.0.4",
  "flake8-bugbear==22.12.6",
  "flake8-docstrings==1.6.0",
  "flake8-import-order==0.18.2",
  "flake8-pyproject==1.2.2",
  "isort==5.11.5",
  "matplotlib",
  "pre-commit",
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
]
docs = [
  "docutils==0.16",
  "ipykernel==6.4.2",
  "myst-parser==0.16.1",
  "nbsphinx==0.8.7",
  "sphinx==4.2.0",
  "sphinx_rtd_theme==1.0.0",
  "sphinxcontrib-katex==0.8.6",
]
ci = [
  "build==0.8.0",
  "pip==22.3.1",
  "setuptools==66.1.0",
  "wheel==0.38.4",
]
all = [
  "pymanopt[backends,dev]",
]
[tool.setuptools_scm]
write_to = "src/pymanopt/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.black]
include = '\.py$'
line-length = 79

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "pycharm"
use_parentheses = true

[tool.flake8]
application_import_names = "pymanopt"
docstring-convention = "google"
exclude = [
  "examples/notebooks/*.py",
  "build"
]
ignore = ["B024", "B027", "D1", "E203", "E501", "W503"]
import_order_style = "pycharm"
max-line-length = 79
select = ["B", "B950", "C", "D", "E", "F", "W"]
