[metadata]
name = pymanopt
author = Jamie Townsend, Niklas Koep, and Sebastian Weichwald
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
description =
    Toolbox for optimization on Riemannian manifolds with support for automatic
    differentiation
keywords =
    automatic differentiation
    manifolds
    optimization
license = BSD 3-Clause License
license_files = LICENSE
long_description = file: README.md, MAINTAINERS, CONTRIBUTORS
long_description_content_type = text/markdown
url = https://pymanopt.org

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pymanopt/_version.py
versionfile_build = pymanopt/_version.py
tag_prefix =
parentdir_prefix =

[options]
install_requires =
    attrs>=21.4.0,<22
    numpy>=1.16
    scipy>=1.0
packages = find:
package_dir =
  = src
python_requires = >=3.7

[options.extras_require]
autograd =
    autograd>=1.2
tensorflow =
    tensorflow>=2.0
torch =
    torch>=1.0
backends = pymanopt[autograd,tensorflow,torch]
dev =
    black[jupyter]==22.3.0
    flake8==5.0.4
    flake8-bugbear==22.12.6
    flake8-docstrings==1.6.0
    flake8-import-order==0.18.2
    isort==5.8.0
    matplotlib
    nose2
    pre-commit
docs =
    docutils==0.16
    ipykernel==6.4.2
    myst-parser==0.16.1
    nbsphinx==0.8.7
    sphinx==4.2.0
    sphinx_rtd_theme==1.0.0
    sphinxcontrib-katex==0.8.6
ci =
    build==0.8.0
    coveralls==3.3.1
    pip==22.3.1
    setuptools==65.6.3
    wheel==0.38.4
all = pymanopt[backends,dev]

[options.packages.find]
exclude =
    tests*

[flake8]
application_import_names = pymanopt
docstring-convention = google
exclude =
    examples/notebooks/*.py
    build
    versioneer.py
ignore = B024, B027, D1, E203, E501, W503
import_order_style = pycharm
max-line-length = 79
select = B, B950, C, D, E, F, W
