[metadata]
name = pymanopt
author = Jamie Townsend, Niklas Koep, and Sebastian Weichwald
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
description =
    Toolbox for optimization on Riemannian manifolds with support for automatic
    differentiation
keywords =
    automatic differentiation
    manifolds
    optimization
license = BSD 3-Clause License
license_files = LICENSE
long_description = file: README.md, MAINTAINERS, CONTRIBUTORS
long_description_content_type = text/markdown
url = https://pymanopt.org

[options]
install_requires =
    numpy>=1.16
    scipy>=1.0,<1.10
packages = find:
package_dir =
  = src
python_requires = >=3.7

[options.extras_require]
autograd =
    autograd>=1.2
jax =
    jax>=0.2.0
    jaxlib
tensorflow =
    tensorflow>=2.0
torch =
    torch>=1.0
backends = pymanopt[autograd,jax,tensorflow,torch]
dev =
    black[jupyter]==22.3.0
    flake8==5.0.4
    flake8-bugbear==22.12.6
    flake8-docstrings==1.6.0
    flake8-import-order==0.18.2
    flake8-pyproject==1.2.2
    isort==5.12.0
    matplotlib
    pre-commit
    pytest==7.2.0
    pytest-cov==4.0.0
docs =
    docutils==0.16
    ipykernel==6.4.2
    myst-parser==0.16.1
    nbsphinx==0.8.7
    sphinx==4.2.0
    sphinx_rtd_theme==1.0.0
    sphinxcontrib-katex==0.8.6
ci =
    build==0.8.0
    pip==22.3.1
    setuptools==65.6.3
    wheel==0.38.4
all = pymanopt[backends,dev]

[options.packages.find]
where = src
exclude =
    tests*
